# game-engine

./: .gdbinit  .gitignore  AndroidManifest.xml  CMakeLists.txt  Makefile  Makefile.ndk  app.cpp  app.h  app_win32.cpp  app_x11.cpp  build.xml  cmake-android.sh  json.cpp  json.h  main.cpp  make32.sh  make64.sh  ray_trace_dod.cpp  ray_trace_oop.cpp  spikes.cpp  swap_chain_test.cpp  test.lua  tutorial.cpp  update.lua  wine32.sh  wine64.sh
android/: CMakeLists.txt  main.cpp
cmake/: FindGLEW.cmake  android-ndk-r7.cmake  android.toolchain.cmake  mingw32-x86_w64.cmake
collada/: CMakeLists.txt  ColladaArray.cpp  ColladaArray.h  ColladaAsset.cpp  ColladaAsset.h  ColladaBind.cpp  ColladaBind.h  ColladaBindMaterial.cpp  ColladaBindMaterial.h  ColladaBindVertexInput.cpp  ColladaBindVertexInput.h  ColladaCamera.cpp  ColladaCamera.h  ColladaDocument.cpp  ColladaDocument.h  ColladaEffect.cpp  ColladaEffect.h  ColladaEffectConstant.cpp  ColladaEffectConstant.h  ColladaEffectNewParam.cpp  ColladaEffectNewParam.h  ColladaEffectProfileCommon.cpp  ColladaEffectProfileCommon.h  ColladaEffectSampler2D.cpp  ColladaEffectSampler2D.h  ColladaEffectSemantic.cpp  ColladaEffectSemantic.h  ColladaEffectSurface.cpp  ColladaEffectSurface.h  ColladaEffectTechnique.cpp  ColladaEffectTechnique.h  ColladaElement.cpp  ColladaElement.h  ColladaExtra.cpp  ColladaExtra.h  ColladaGeometricPrimitive.cpp  ColladaGeometricPrimitive.h  ColladaGeometry.cpp  ColladaGeometry.h  ColladaImage.cpp  (+49 more)
docs/: pthreads.txt
engine/: CMakeLists.txt  app.h  app_win32.cpp  engine.cpp  engine.h  entity.cpp  entity.h  json.cpp  json.h  json_io.h  main.cpp  math_util.h  matrix3.h  matrix4.h  mesh.h  mesh_io.h  opengl.h  protocol.cpp  protocol.h  quaternion.h  render.cpp  render.h  scene_graph.cpp  scene_graph.h  shader.cpp  shader.h  socket.cpp  socket.h  stream.cpp  stream.h  swap_chain.cpp  swap_chain.h  swap_chain_android.cpp  swap_chain_mac.cpp  swap_chain_mac.mm  swap_chain_win32.cpp  swap_chain_x11.cpp  task.cpp  task.h  vector2.h  (+2 more)
jni/: Android.mk  Application.mk  android_main.cpp
lua/: CMakeLists.txt  Makefile  tutorial.cpp
lua/src/: llex.c
solver/: solver.cpp
tinyxml/: CMakeLists.txt
tool/: CMakeLists.txt  app.cpp  app.h  app_mac.cpp  app_win32.cpp  app_x11.cpp  exec.cpp  exec.h  main.cpp
